# chatterbox-microservices

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  docker-compose.yml  nest-cli.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  skaffold.yaml  tsconfig.json
.husky/: pre-commit
accounts-service/: .eslintrc.json  jest-e2e.config.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
auth-service/: .dockerignore  .eslintrc.json  Dockerfile  Dockerfile.dev  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client-temp/: index.html  package-lock.json  package.json
common/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
contact-service/: Dockerfile  package-lock.json  package.json
infra/: .terraform.lock.hcl  alb.tf  ec2_auto_scaling.tf  ecr.tf  ecs.tf  iam.tf  main.tf  route_53.tf  security_groups.tf  variables.tf  vpc.tf
k8s/: accounts-service.yaml  auth-config.yaml  auth-deploy.yaml  auth-service.yaml  auth-svc.yaml  auth.yaml  contact-config.yaml  contact-deploy.yaml  contact-service.yaml  contact-svc.yaml  ingress-nginx-svc.yaml  ingress.yaml  messages-config.yaml  messages-deploy.yaml  messages-service.yaml  messages-svc.yaml  messages.yaml  parties-deploy.yaml  parties-svc.yaml  profiles-deploy.yaml  profiles-svc.yaml  profiles.yaml  shared-config.yaml
next/: .gitignore  (+10 more)
services/messages/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  package-lock.json  package.json  sst-env.d.ts  tsconfig.json
services/messages/src/: main.rs
(+976 files in other folders)
