[package]
name = "chatterbox-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
  "http1",
  "tokio",
] }
socketioxide = { version = "0.16.1", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
