[package]
name = "chatterbox-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
axum = { version = "0.8.1", default-features = false, features = [
  "http1",
  "tokio",
] }
jsonwebtoken = { version = "9.3.1", default-features = false }
serde = { version = "1.0.217", default-features = false }
socketioxide = { version = "0.16.1", default-features = false, features = [
  "extensions",
  "state",
] }
tokio = { version = "1.43.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
